// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderManagementFlowsPreferences/> ToggleInput.onChange() should deactivate the report issue policy on the mystore3 store 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/self-service"
            >
              Self-service
            </a>
          </li>
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            mystore3
          </li>
        </ol>
      </nav>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/self-service/shopify/mystore3/preferences/quick-response"
      >
        Quick Response Flows
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/self-service/shopify/mystore3/preferences/order-management"
      >
        Order Management Flows
      </a>
    </nav>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="mb-3"
          >
            <p
              class="preferencesDescription"
            >
              Allow customers to manage their orders directly from chat and help center. Shoppers can click the actions below depending on the status of their order.
               
              <a
                href="https://docs.gorgias.com/self-service/self-service-portal-statuses"
                rel="noopener noreferrer"
                target="_blank"
              >
                Read more
              </a>
            </p>
            <div
              class="alert info mb16"
            >
              <div
                class="iconContainer"
              >
                <img
                  alt="icon"
                  src="test-file-stub"
                />
              </div>
              <div
                class="content"
              >
                <span
                  class="label"
                >
                  Do you want help from one of our agents to improve automations?
                </span>
                <div
                  class="customActions"
                >
                  <a
                    class="actionLink"
                    to="#"
                  >
                    Contact Us
                  </a>
                </div>
              </div>
            </div>
            <table
              class="table"
            >
              <tbody>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <div>
                      <label
                        aria-checked="true"
                        class="label label"
                        for="toggle-button-42"
                        role="switch"
                      >
                        <input
                          checked=""
                          class="input"
                          disabled=""
                          id="toggle-button-42"
                          name="toggle-button-42"
                          type="checkbox"
                        />
                        <div
                          class="slider"
                        />
                      </label>
                    </div>
                  </td>
                  <td
                    class="policyTd"
                  >
                    <div
                      class="policyRowInfo"
                    >
                      <div
                        class="content"
                      >
                        <span
                          class="policyName"
                        >
                          Track order
                        </span>
                        <span
                          class="policyDescription"
                        >
                          Allow customers to view order tracking information.
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    class="smallest align-middle"
                  />
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <div>
                      <label
                        aria-checked="true"
                        class="label label"
                        for="toggle-button-42"
                        role="switch"
                      >
                        <input
                          checked=""
                          class="input"
                          disabled=""
                          id="toggle-button-42"
                          name="toggle-button-42"
                          type="checkbox"
                        />
                        <div
                          class="slider"
                        />
                      </label>
                    </div>
                  </td>
                  <td
                    class="policyTd"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore3/preferences/returns"
                    >
                      <div
                        class="policyRowInfo"
                      >
                        <div
                          class="content"
                        >
                          <span
                            class="policyName"
                          >
                            Return order
                          </span>
                          <span
                            class="policyDescription"
                          >
                            Allow customers to request returns and customize criteria for requests.
                          </span>
                        </div>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore3/preferences/returns"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <div>
                      <label
                        aria-checked="false"
                        class="label label"
                        for="toggle-button-42"
                        role="switch"
                      >
                        <input
                          class="input"
                          disabled=""
                          id="toggle-button-42"
                          name="toggle-button-42"
                          type="checkbox"
                        />
                        <div
                          class="slider"
                        />
                      </label>
                    </div>
                  </td>
                  <td
                    class="policyTd"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore3/preferences/cancellations"
                    >
                      <div
                        class="policyRowInfo"
                      >
                        <div
                          class="content"
                        >
                          <span
                            class="policyName"
                          >
                            Cancel order
                          </span>
                          <span
                            class="policyDescription"
                          >
                            Allow customers to request order cancellations and customize criteria for requests.
                          </span>
                        </div>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore3/preferences/cancellations"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <div>
                      <label
                        aria-checked="false"
                        class="label label"
                        for="toggle-button-42"
                        role="switch"
                      >
                        <input
                          class="input"
                          disabled=""
                          id="toggle-button-42"
                          name="toggle-button-42"
                          type="checkbox"
                        />
                        <div
                          class="slider"
                        />
                      </label>
                    </div>
                  </td>
                  <td
                    class="policyTd"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore3/preferences/report-issue"
                    >
                      <div
                        class="policyRowInfo"
                      >
                        <div
                          class="content"
                        >
                          <span
                            class="policyName"
                          >
                            Report order issue
                          </span>
                          <span
                            class="policyDescription"
                          >
                            Allow customers to report order issues and set conditions based on custom scenarios.
                          </span>
                        </div>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore3/preferences/report-issue"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="col"
          data-testid="previewColumn"
        >
          <div
            class="preview"
          >
            <div
              class="container"
            >
              <div
                class="mb-4 btn-group"
                role="group"
              >
                <button
                  class="btn btn-info"
                  type="button"
                >
                  Chat
                </button>
                <button
                  class="btn btn-secondary"
                  type="button"
                >
                  Help Center
                </button>
              </div>
              <div
                class="preview"
              >
                <div
                  class="dialog"
                >
                  <div
                    class="header"
                    style="background-color: rgb(13, 135, 221);"
                  >
                    <div
                      class="agents"
                    >
                      <div
                        class="agent first"
                        style="border-color: #0d87dd;"
                      >
                        <i
                          class="material-icons"
                        >
                          person
                        </i>
                      </div>
                      <div
                        class="agent middle"
                        style="border-color: #0d87dd;"
                      >
                        <i
                          class="material-icons"
                        >
                          person
                        </i>
                        <div
                          class="onlineMarker"
                        />
                      </div>
                      <div
                        class="agent last"
                        style="border-color: #0d87dd;"
                      >
                        <i
                          class="material-icons"
                        >
                          person
                        </i>
                      </div>
                    </div>
                    <div
                      class="details"
                    >
                      <div
                        class="appName"
                      >
                        Chat
                      </div>
                      <div
                        class="introductionText"
                      >
                        How can we help?
                      </div>
                    </div>
                  </div>
                  <div
                    class="content"
                  >
                    <ul
                      class="buttons list-group"
                    >
                      <li
                        class="button header list-group-item"
                      >
                        Manage your orders
                      </li>
                      <li
                        class="button list-group-item"
                      >
                        Track an order
                        <span
                          class="material-icons-outlined chevronIcon"
                        >
                          chevron_right
                        </span>
                      </li>
                      <li
                        class="button list-group-item"
                      >
                        Return an order
                        <span
                          class="material-icons-outlined chevronIcon"
                        >
                          chevron_right
                        </span>
                      </li>
                    </ul>
                  </div>
                  <div
                    class="footer"
                  >
                    <span
                      class="needHelpText"
                    >
                      Need more help?
                    </span>
                    <button
                      class="btn btn-primary"
                      style="background-color: rgb(13, 135, 221); border-color: #0d87dd;"
                    >
                      <img
                        alt="send message icon"
                        class="sendMessageIcon"
                        src="test-file-stub"
                      />
                      Send us a message
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<OrderManagementFlowsPreferences/> render() should render the 4 policy rows, 2 active and 2 inactive 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/self-service"
            >
              Self-service
            </a>
          </li>
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            mystore1
          </li>
        </ol>
      </nav>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/self-service/shopify/mystore1/preferences/quick-response"
      >
        Quick Response Flows
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/self-service/shopify/mystore1/preferences/order-management"
      >
        Order Management Flows
      </a>
    </nav>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="mb-3"
          >
            <p
              class="preferencesDescription"
            >
              Allow customers to manage their orders directly from chat and help center. Shoppers can click the actions below depending on the status of their order.
               
              <a
                href="https://docs.gorgias.com/self-service/self-service-portal-statuses"
                rel="noopener noreferrer"
                target="_blank"
              >
                Read more
              </a>
            </p>
            <div
              class="alert info mb16"
            >
              <div
                class="iconContainer"
              >
                <img
                  alt="icon"
                  src="test-file-stub"
                />
              </div>
              <div
                class="content"
              >
                <span
                  class="label"
                >
                  Do you want help from one of our agents to improve automations?
                </span>
                <div
                  class="customActions"
                >
                  <a
                    class="actionLink"
                    to="#"
                  >
                    Contact Us
                  </a>
                </div>
              </div>
            </div>
            <table
              class="table"
            >
              <tbody>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <div>
                      <label
                        aria-checked="true"
                        class="label label"
                        for="toggle-button-42"
                        role="switch"
                      >
                        <input
                          checked=""
                          class="input"
                          disabled=""
                          id="toggle-button-42"
                          name="toggle-button-42"
                          type="checkbox"
                        />
                        <div
                          class="slider"
                        />
                      </label>
                    </div>
                  </td>
                  <td
                    class="policyTd"
                  >
                    <div
                      class="policyRowInfo"
                    >
                      <div
                        class="content"
                      >
                        <span
                          class="policyName"
                        >
                          Track order
                        </span>
                        <span
                          class="policyDescription"
                        >
                          Allow customers to view order tracking information.
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    class="smallest align-middle"
                  />
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <div>
                      <label
                        aria-checked="true"
                        class="label label"
                        for="toggle-button-42"
                        role="switch"
                      >
                        <input
                          checked=""
                          class="input"
                          disabled=""
                          id="toggle-button-42"
                          name="toggle-button-42"
                          type="checkbox"
                        />
                        <div
                          class="slider"
                        />
                      </label>
                    </div>
                  </td>
                  <td
                    class="policyTd"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore1/preferences/returns"
                    >
                      <div
                        class="policyRowInfo"
                      >
                        <div
                          class="content"
                        >
                          <span
                            class="policyName"
                          >
                            Return order
                          </span>
                          <span
                            class="policyDescription"
                          >
                            Allow customers to request returns and customize criteria for requests.
                          </span>
                        </div>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore1/preferences/returns"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <div>
                      <label
                        aria-checked="false"
                        class="label label"
                        for="toggle-button-42"
                        role="switch"
                      >
                        <input
                          class="input"
                          disabled=""
                          id="toggle-button-42"
                          name="toggle-button-42"
                          type="checkbox"
                        />
                        <div
                          class="slider"
                        />
                      </label>
                    </div>
                  </td>
                  <td
                    class="policyTd"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore1/preferences/cancellations"
                    >
                      <div
                        class="policyRowInfo"
                      >
                        <div
                          class="content"
                        >
                          <span
                            class="policyName"
                          >
                            Cancel order
                          </span>
                          <span
                            class="policyDescription"
                          >
                            Allow customers to request order cancellations and customize criteria for requests.
                          </span>
                        </div>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore1/preferences/cancellations"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="smallest align-middle"
                  >
                    <div>
                      <label
                        aria-checked="false"
                        class="label label"
                        for="toggle-button-42"
                        role="switch"
                      >
                        <input
                          class="input"
                          disabled=""
                          id="toggle-button-42"
                          name="toggle-button-42"
                          type="checkbox"
                        />
                        <div
                          class="slider"
                        />
                      </label>
                    </div>
                  </td>
                  <td
                    class="policyTd"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore1/preferences/report-issue"
                    >
                      <div
                        class="policyRowInfo"
                      >
                        <div
                          class="content"
                        >
                          <span
                            class="policyName"
                          >
                            Report order issue
                          </span>
                          <span
                            class="policyDescription"
                          >
                            Allow customers to report order issues and set conditions based on custom scenarios.
                          </span>
                        </div>
                      </div>
                    </a>
                  </td>
                  <td
                    class="smallest align-middle"
                  >
                    <a
                      to="/app/settings/self-service/shopify/mystore1/preferences/report-issue"
                    >
                      <i
                        class="material-icons md-2 align-middle icon-go-forward"
                      >
                        keyboard_arrow_right
                      </i>
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="col"
          data-testid="previewColumn"
        >
          <div
            class="preview"
          >
            <div
              class="container"
            >
              <div
                class="mb-4 btn-group"
                role="group"
              >
                <button
                  class="btn btn-info"
                  type="button"
                >
                  Chat
                </button>
                <button
                  class="btn btn-secondary"
                  type="button"
                >
                  Help Center
                </button>
              </div>
              <div
                class="preview"
              >
                <div
                  class="dialog"
                >
                  <div
                    class="header"
                    style="background-color: rgb(13, 135, 221);"
                  >
                    <div
                      class="agents"
                    >
                      <div
                        class="agent first"
                        style="border-color: #0d87dd;"
                      >
                        <i
                          class="material-icons"
                        >
                          person
                        </i>
                      </div>
                      <div
                        class="agent middle"
                        style="border-color: #0d87dd;"
                      >
                        <i
                          class="material-icons"
                        >
                          person
                        </i>
                        <div
                          class="onlineMarker"
                        />
                      </div>
                      <div
                        class="agent last"
                        style="border-color: #0d87dd;"
                      >
                        <i
                          class="material-icons"
                        >
                          person
                        </i>
                      </div>
                    </div>
                    <div
                      class="details"
                    >
                      <div
                        class="appName"
                      >
                        Chat
                      </div>
                      <div
                        class="introductionText"
                      >
                        How can we help?
                      </div>
                    </div>
                  </div>
                  <div
                    class="content"
                  >
                    <ul
                      class="buttons list-group"
                    >
                      <li
                        class="button header list-group-item"
                      >
                        Manage your orders
                      </li>
                      <li
                        class="button list-group-item"
                      >
                        Track an order
                        <span
                          class="material-icons-outlined chevronIcon"
                        >
                          chevron_right
                        </span>
                      </li>
                      <li
                        class="button list-group-item"
                      >
                        Return an order
                        <span
                          class="material-icons-outlined chevronIcon"
                        >
                          chevron_right
                        </span>
                      </li>
                    </ul>
                  </div>
                  <div
                    class="footer"
                  >
                    <span
                      class="needHelpText"
                    >
                      Need more help?
                    </span>
                    <button
                      class="btn btn-primary"
                      style="background-color: rgb(13, 135, 221); border-color: #0d87dd;"
                    >
                      <img
                        alt="send message icon"
                        class="sendMessageIcon"
                        src="test-file-stub"
                      />
                      Send us a message
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
